# futuremindrecrutment

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
box_office/: __init__.py  config.py  constants.py  db.py  logging_config.py
box_office/api/: main.py  schemas.py
box_office/clients/: __init__.py  omdb.py
box_office/etl/: etl.py
box_office/gold/: app.py  queries.py
box_office/helpers/: parsing.py
box_office/models/: __init__.py  api.py  base.py  bridges.py  bronze.py  dimensions.py  facts.py  omdb.py  results.py
box_office/pipeline/: calendar.py  etl.py  facts.py  movies.py  reference.py
box_office/repositories/: __init__.py  date.py  facts.py  movies.py  omdb.py  reference.py  revenue.py
box_office/warehouse/bronze/: omdb.py  revenue.py
box_office/warehouse/silver/: calendar.py  facts.py  movies.py  reference.py
docs/: er_diagram.html
